<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/tbllUp"
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:background="@drawable/toolbar"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center_vertical"
        tools:layout_editor_absoluteX="167dp">

        <Button
            android:id="@+id/btnPrePage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/abc_vector_test"
            android:layout_marginStart="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="95dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        android:gravity="center">

        <TextView
            android:id="@+id/tvPlayinform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_inform"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="120dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/bighead"

                />

            <LinearLayout
                android:layout_width="218dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvPlayerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="130dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPlayerInformation"
                    android:text="PlayerName" />

                <TextView
                    android:id="@+id/tvPlayerLevel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPlayerInformation"
                    android:text="PlayerLevel" />

                <TextView
                    android:id="@+id/tvTablet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/tvTablet"
                    android:textColor="@color/colorPlayerInformation"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNumberCoins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/NumberCoins" />

                <TextView
                    android:id="@+id/tvRegisterDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/RegisterDate" />

                <TextView
                    android:id="@+id/tvPlayetime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Playtime" />
                <TextView
                    android:id="@+id/tvCurrentExperience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/CurrentExperience" />
                <TextView
                    android:id="@+id/tvCurrentRankScores"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/CurrentRankScores" />
                <TextView
                    android:id="@+id/tvCurrentTablet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/CurrentTablet" />
                <TextView
                    android:id="@+id/tvMatchRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/MatchRecord" />
                <TextView
                    android:id="@+id/tvRankWinPercent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/RankWinPercent" />
                <TextView
                    android:id="@+id/tvNumberOfCorrectAns"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/NumberOfCorrectAns" />
                <TextView
                    android:id="@+id/tvHighestContWin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/HighestContWin" />
                <TextView
                    android:id="@+id/tvThebBestSurv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/TheBestSurv" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNumberCoinss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="62dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/PlayerMoney" />
                <TextView
                    android:id="@+id/tvRegisterDatee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/SignDate" />
                <TextView
                    android:id="@+id/tvPlayetimee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/_100_10" />
                <TextView
                    android:id="@+id/tvCurrentExperiencee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="62dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/CurrentExperiencee" />
                <TextView
                    android:id="@+id/tvCurrentRankScoress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="125dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/CurrentRankScoress" />
                <TextView
                    android:id="@+id/tvTablett"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Tablet" />
                <TextView
                    android:id="@+id/tvMatchRecordd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="78dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/MatchRecordd" />
                <TextView
                    android:id="@+id/tvRankWinPercentt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="135dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/RankWinPercentt" />
                <TextView
                    android:id="@+id/tvNumberOfCorrectAnss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="128dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/NumberOfCorrectAnss" />
                <TextView
                    android:id="@+id/tvHighestContWinn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="143dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/HighestContWinn" />
                <TextView
                    android:id="@+id/tvThebBestSurvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textColor="@color/colorPlayerInformation"
                    android:layout_marginStart="140dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/TheBestSurvv" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>