<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register_page">

    <LinearLayout
        android:id="@+id/tbllUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_up"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="167dp">

        <Button
            android:id="@+id/btnPrePage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/abc_vector_test"
            android:backgroundTint="@color/colorMainPageDarkBlue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_up"
        android:gravity="center"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorMainPageDarkBlue"
            android:textSize="40dp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:padding="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnSignin"
        app:layout_constraintTop_toBottomOf="@+id/tbllUp"
        tools:layout_editor_absoluteX="25dp">

        <TextView
            android:id="@+id/tvPlayerName"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/PlayerName"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtPlayerName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/tvAcount"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/Acount"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtAcount"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:labelFor="@id/edtAcount" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/Password"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvPasswordCheck"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/PasswordCheck"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textPassword"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/Email"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="125dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_radius"
        android:backgroundTint="@color/colorMainPageDarkBlue"
        android:textSize="20sp"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:text="@string/sing_in" />

</androidx.constraintlayout.widget.ConstraintLayout>
